magic-cloud-back/service-back.yml
apiVersion: v1
kind: Service
metadata:
  name: pod-service
spec:
  selector:
    app: magic-cloud-back
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
