magic-cloud-back/ingress-back.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-back
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: magic-cloud-back.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magic-cloud-back
                port:
                  number: 8080
